add user interaction button to test page

--- a/test-page/index.html
+++ b/test-page/index.html
@@ -7,6 +7,10 @@
 <body>
   <h1>mantra test page</h1>
   <script type="text/javascript" src="main.js"></script>
+  <p>Some browsers like Chrome don't allow you to start an audio context until
+  the user has interacted with the page somehow. So, here's a button you can
+  click.</p>
+  <input type="button" value="interact"></input>
 </body>
 </html>
 
